# robotic-manipulation-learning

./: .gitignore  CITATION.md  Makefile  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements-book.txt  requirements-online.txt  requirements.txt
.devcontainer/: devcontainer.json
book/: 00_manipulation_stack.md  01_robot_setup.md  02_transforms_kinematics_ik.ipynb  03_geometric_perception_icp.ipynb  04_grasp_scoring.ipynb  05_motion_planning_rrt.ipynb  06_control_pd_impedance.ipynb  07_segmentation_to_grasp.ipynb  08_rl_gridworld.ipynb  _config.yml  _toc.yml  intro.md  myst.yml
docs/: book_visual_philosophy.md  book_workflow.md  capstone_portfolio.md  casebook_visual_index.md  colab.md  colab_visual_prompts.md  deep_course_companion.md  drake_setup.md  external_resources.md  full_course_learning_map.md  github_publish_notes.md  glossary.md  learning_log.md  learning_tracks.md  math_notes.md  online_platform.md  process_visualizations.md  repository_quality_standard.md  teaching_guide.md  vscode_learning.md
dse_results/: DSE_REPORT.md  DSE_STATE.json  dse_log.csv  inferred_params.md  parse_result.py
platform/: colab.html  index.html  labs.html  styles.css
references/: README.md
tests/: test_book_figures.py  test_book_learning_scaffold.py  test_book_operations.py  test_casebook_figures.py  test_colab_project.py  test_control.py  test_differential_ik.py  test_grasp_scoring.py  test_gridworld.py  test_icp.py  test_jupyter_book.py  test_kinematics.py  test_online_platform.py  test_repository_score.py  test_rrt.py  test_transforms.py  (+1 more)
(+87 files in other folders)
